Chonker/Tests/Error/wrong_arg_type.chonk
function void numberPrint(number nmb)
{
  print nmb;
}

numberPrint("Hello World but Better"); 